--- a/Portfolio.html
+++ b/Portfolio.html
@@ -96,16 +96,16 @@
                 <div class="cont-layout">
                     <form class="frm">
                         <div class="in-grp">
-                            <label for="name">Your Name:</label>
-                            <input type="text" name="name" id="name">
+                            <input type="text" name="name" id="name" placeholder=" " required>
+                            <label for="name">Your Name</label>
                         </div>
                         <div class="in-grp">
-                            <label for="email">Your Email:</label>
-                            <input type="email" name="email" id="email">
+                            <input type="email" name="email" id="email" placeholder=" " required>
+                            <label for="email">Your Email</label>
                         </div>
                         <div class="in-grp">
-                            <label for="msg">Your Message:</label>
-                            <textarea name="msg" id="msg"></textarea>
+                            <textarea name="msg" id="msg" placeholder=" " required></textarea>
+                            <label for="msg">Your Message</label>
                         </div>
                         <button type="submit" class="submit">Send Message</button>
                     </form>
@@ -115,22 +115,27 @@
                             <span class="add">razijemni264@gmail.com</span>
                         </div>
                         <div class="icon-hub">
-                            <div class="icon">
-                                <span>LinkedIn</span>
-                            </div>
-                            <div class="icon">
-                                <span>Instagram</span>
-                            </div>
-                            <div class="icon">
-                                <span>Facebook</span>
-                            </div>
-                            <div class="icon">
-                                <span>X</span>
-                            </div>
+                            <a href="https://www.linkedin.com/in/razi-jemni" target="_blank" class="icon">
+                                <img src="Assets/linkedin_3536569.png" alt="LinkedIn">
+                                <span>Razi Jemni</span>
+                            </a>
+                            <a href="https://www.instagram.com/razi.jemni/" target="_blank" class="icon">
+                                <img src="Assets/instagram_1419647.png" alt="Instagram">
+                                <span>razi.jemni</span>
+                            </a>
+                            <a href="https://www.facebook.com/RaziJemnixD" target="_blank" class="icon">
+                                <img src="Assets/facebook_3536423.png" alt="Facebook">
+                                <span>Jemni Razi</span>
+                            </a>
+                            <a href="https://github.com/RaziJemniXD" target="_blank" class="icon">
+                                <img src="Assets/github_3291695.png" alt="Github">
+                                <span>RaziJemniXD</span>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <button onClick="slide(2)" class="prev">Projects</button>
+                <p>&copy; 2024 Razi Jemni. All Rights Reserved.</p>
             </div>
         </div>
     </div>
